Change deposit implementation to use general request bus
Signed-off-by: Gabriel-Trintinalia <gabriel.trintinalia@consensys.net>